# FastDCT

./: README.md  math.ipynb
benchmark/: CMakeLists.txt  main.cpp
dct/: CMakeLists.txt
dct/include/: fdct.hpp  ndct.hpp  sdct.hpp
dct/src/: CMakeLists.txt  fdct.cpp  ndct.cpp  sdct.cpp
